# dcs-labs

./: README.md
.jxbrowser.userdata/: Local State  SingletonCookie  SingletonLock  SingletonSocket
.jxbrowser.userdata/Default/: Current Session  History  History Provider Cache  History-journal  Preferences  Secure Preferences  Top Sites  Visited Links
.jxbrowser.userdata/Default/Cache/: 048e20baf9b66e71_0  089d38f979eeb0ef_0  0a1027f6c46d1723_0  11f5a3259042a2fc_0  13db3a0a1a541b70_0  14ec2f087dc4725b_0  1a312b0c9228bebf_0  270cb3a1bdcd01fc_0  2f48aea5bea0cdfd_0  3cc5a91ee2b8999e_0  4bbf0bb24bfae701_0  56963ef2eec193e2_0  578d7f816e2e94db_0  6777a108dbc0ec65_0  83045fee2d2df67e_0  90ace41e0880441e_0  9206ce6aeecc8005_0  9382b71a538c100f_0  9cf85a9f91c53fdc_0  a1e0752100b1db3e_0  a976561641c6323e_0  acbdfcfd9073fded_0  b9dfdc59cde98236_0  d4a03d13317a9654_0  d70bab917135d65b_0  dfb96cb4ca0488f0_0  f6b79085432698be_0  f8b4e27cb106c780_0  f8e07fe7e21d6172_0
.jxbrowser.userdata/Default/Extension State/: LOG
.jxbrowser.userdata/Default/GPUCache/: index
Lab2/: .ccsproject  .cproject  CMakeLists.txt  state 1 is working.rar  states 12 are working for real.rar  states12 are working.rar
Lab2/208516039_315602938/IAR/header/: halGPIO.h
Lab2/208516039_315602938/IAR/source/: api.c  bsp.c  halGPIO.c  main.c
Lab2/LAB2 Code Example MSP430G2xx3/: ReadMe.txt
Lab2/aux_files/: LAB2 forum.xlsx  LCD_4bitDATA.d43
Lab2/hanan/drive-download-20220427T163133Z-001/header/: bsp.h
Lab2/hanan/drive-download-20220427T163133Z-001/source/: bsp.c  main.c
Lab2/header/: api.h  app.h  bsp.h  halGPIO.h
Lab2/irrelevant/header/: api 4.h  app 5.h  bsp 2.h  bsp 3.h  halGPIO 2.h
Lab2/irrelevant/source/: api.c  bsp 2.c  halGPIO 2.c  main 2.c
Lab2/source/: LCD.c  api.c  bsp.c  halGPIO.c  main.c
Lab2/states 12 are working for real/header/: halGPIO.h
Lab2/states 12 are working for real/source/: api.c  halGPIO.c  main.c
Lab2/states12 are working/states12 are working/source/: api.c  halGPIO.c  main.c
Lab3/: IARproject.dep  lab3ws.eww
Lab3/.jxbrowser.userdata/: Local State  Local State 3  SingletonCookie 2  SingletonLock 2  SingletonSocket
Lab3/.jxbrowser.userdata/Default/: History  (+9 more)
Lab3/LAB3_PRE/: .ccsproject 2  .cproject 2  .project  IARproject.dep  IARproject.ewd  IARproject.ewp  IARworkspace.eww
Lab3/header/: app.h  bsp.h  halGPIO.h
Lab3/header (Not Updated)/: api.h
Lab3/settings/: lab3ws.wsdt
Lab3/source/: LCD.c  halGPIO.c
Lab3/source (Not Updated)/: api.c  bsp.c  main.c
Lab4/.jxbrowser.userdata/: Local State  SingletonCookie  SingletonLock  SingletonSocket
Lab4/LAB4_POST/: דוח מסכם.docx
Lab4/LAB4_PRE/: דוח מכין.docx
Lab4/Lab4preCCS/: .ccsproject 2  .cproject  .project
Lab4/python/: ex1.py
finalDCS/: .cproject  .project  main.c
finalDCS/.launches/: finalDCS.launch
finalDCS/Debug/: ccsObjs.opt  finalDCS.map  finalDCS.out  finalDCS_linkInfo.xml  main.d  makefile  sources.mk  subdir_rules.mk
finalDCS/Python/: main.py
finalDCS/python/: hananUart.py  kfirspy.py
(+377 files in other folders)
